# wtbot

./: .gitignore  pyproject.toml
wtbot/: config.py  dependencies.py  downloader.py
