[tool.poetry]
name = "wtbot"
version = "0.1.0"
description = ""
authors = ["Arkhipov Nikita"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"
black = "^20.8b1"
isort = "^5.8.0"

[tool.isort]
multi_line_output = 3
#include_trailing_comma = 1
#ensure_newline_before_comments = 1
#line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
